Added CRUD logic

--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ POSTGRES_DB=arcanebet
 POSTGRES_USER=user
 POSTGRES_PASSWORD=password
 POSTGRES_PORT=5432
+
+############## RoR
+RAILS_ENV=development
