--- a/.env.dist
+++ b/.env.dist
@@ -4,10 +4,7 @@ VOLUMES_DRIVER=local
 NETWORKS_DRIVER=bridge
 
 ############## Postgres
-POSTGRES_DB=arcanebet
-POSTGRES_USER=user
-POSTGRES_PASSWORD=password
+POSTGRES_DB=default
+POSTGRES_USER=default
+POSTGRES_PASSWORD=secret
 POSTGRES_PORT=5432
-
-############## RoR
-RAILS_ENV=production
