Added production config for DB, part 2

--- a/.env.dist
+++ b/.env.dist
@@ -8,3 +8,6 @@ POSTGRES_DB=default
 POSTGRES_USER=default
 POSTGRES_PASSWORD=secret
 POSTGRES_PORT=5432
+
+############## Postgres production
+DATABASE_URL=url
