--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
       - POSTGRES_USER
       - POSTGRES_PASSWORD
       - POSTGRES_PORT
+      - DATABASE_URL
       - RAILS_ENV
     volumes:
       - .:/app
