Remove .env from git

--- a/.env.dist
+++ b/.env.dist
@@ -3,6 +3,9 @@ VOLUMES_DRIVER=local
 ############## Networks driver
 NETWORKS_DRIVER=bridge
 
+############## RoR
+RAILS_ENV=development
+
 ############## Postgres
 POSTGRES_DB=default
 POSTGRES_USER=default
